<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itvo.acuacultura.MainActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingTop="@dimen/PaddingLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8">

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuTitle"
            android:textAlignment="center"
            android:textSize="@dimen/TituloSize"
            android:textColor="@android:color/black"
            />
        </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/RelativeMenu">

                <Button
                    android:id="@+id/btnCalidadAgua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Calidad"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="calidadAgua"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/alimentacion"
                    android:layout_alignLeft="@+id/btnEnfermedades"
                    android:layout_alignStart="@+id/btnEnfermedades"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="Alimentacion"
                    android:id="@+id/btnAlimentacion"/>

                <Button
                    android:id="@+id/btnCrecimiento"
                    android:theme="@style/RaisedButtonDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Crecimiento"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/btnCalidadAgua"
                    android:layout_alignEnd="@+id/btnCalidadAgua"
                    android:onClick="Crecimiento"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Enfermedades"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:theme="@style/RaisedButtonDark"
                    android:id="@+id/btnEnfermedades"
                    android:onClick="Enfermedades"
                    />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
